Archive2/6f/cab492c134b11c/output
main.cpp: In function 'int getopt(int, char* const*, const char*)':
main.cpp:5:13: error: assignment of read-only location '*(argv + 8u)'
     argv[1] = argv[0];
             ^
